#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-12-13
2013-12-19 Andy Salnikov
- hdf5 backend: add 'zero_dims' tag to dataset, nedeed for new Epix type

Tag: V00-12-12
2013-12-16 David Schneider
- hdf5 Translator backend, epics handling, remove FullFrame, documentation

Tag: V00-12-11
2013-12-09 David Schneider
- hdf5 Translator backend, epics handling, added bounds checking for ctrl enum pv

Tag: V00-12-10
2013-12-04 David Schneider
- hdf5 Translator backend, ndarray support
- change epics ctrl enum h5 type id to use no_str in creating h5 type for strs
- update comments in default_psana.cfg, document all cfg options

Tag: V00-12-09
2013-11-19 David Schneider
- hdf5 Translator backend, fix deprecated compiler warning.

Tag: V00-12-08
2013-11-19 David Schneider
- hdf5 Translator backend, use compound stamp in epics for backward compatibility.

Tag: V00-12-07
2013-11-18 Andy Salnikov
- add support for external HDF5 attributes

Tag: V00-12-06
2013-11-15 Andy Salnikov
- modify backends to allow types/consts/enums at the global namespace
- python backend needs more work if we do need full support
- this feature mostly targets xtc external types

Tag: V00-12-05
2013-11-15 Andy Salnikov
- define DdlHdf5Translator.backendOptions() method

Tag: V00-12-04
2013-11-12 Andy Salnikov
- add support for declaration of methods returning arrays of enums

Tag: V00-12-03
2013-11-08 David Schneider
- Translator backend: remove references to xml files
- Translator backend: change default psana.cfg to include epics config

Tag: V00-12-02
2013-11-07 David Schneider
- adapt Translator to PSEvt tag V00-07-04
- fix bug, adapt Translator Ddl backend to psddl tag V00-11-00