@@ -8,7 +8,7 @@
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 {% macro comma_shape(shape) -%}
 {% for dim in shape -%}
-, {% if dim is none %}0{% else %}{{dim}}{% endif %}
+, {% if dim is none %}dim{{loop.index0}}{% else %}{{dim}}{% endif %}
 {%- endfor %}
 {%- endmacro %}
 ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
